[gd_scene load_steps=4 format=3 uid="uid://c5c5t6pter7lf"]

[ext_resource type="Script" uid="uid://bc08c0n3ve2xd" path="res://Levels/win_screen_2.gd" id="1_7rwuw"]
[ext_resource type="Texture2D" uid="uid://b1b112ucgxmn1" path="res://icon.svg" id="1_j6x48"]
[ext_resource type="AudioStream" uid="uid://l6yybybf5goj" path="res://sfx/35. Superb!.mp3" id="2_8v2uh"]

[node name="WinScreen2" type="Node2D"]
script = ExtResource("1_7rwuw")

[node name="Camera2D" type="Camera2D" parent="."]

[node name="Background" type="Sprite2D" parent="."]
modulate = Color(0, 0, 0, 1)
position = Vector2(25.250029, 24.250021)
scale = Vector2(10.871094, 6.855469)
texture = ExtResource("1_j6x48")

[node name="Sprite2D" type="Sprite2D" parent="."]
visible = false
position = Vector2(6, -199)
texture = ExtResource("1_j6x48")

[node name="GoodJob" type="Sprite2D" parent="."]
visible = false
position = Vector2(450, 212)
texture = ExtResource("1_j6x48")

[node name="GoodWinText" type="Label" parent="."]
visible = false
offset_right = 40.0
offset_bottom = 23.0
text = "You Win, great job"

[node name="HappyMusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_8v2uh")

[node name="Timer" type="Timer" parent="."]

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
